<resources>
    <string name="dr">Dr(a). </string>
    <string name="app_name">E-Prescription</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="doctor_create_button">Criar Conta como Médico</string>
    <string name="sign_out">Sign Out</string>
    <string name="patient_create_account">Criar conta como Paciente</string>
    <string name="login_popup_text">Insira E-mail e senha para entrar</string>
    <string name="email_hint">E-mail</string>
    <string name="login_text">Login</string>
    <string name="title_activity_patient_home">PatientHomeActivity</string>
    <string name="title_register">Insira seus dados para completar seu cadastro</string>
    <string name="hint_name">Nome</string>
    <string name="hint_surname">Sobrenome</string>
    <string name="hint_date_of_birth">Data de nascimento</string>
    <string name="radio_button_male">Masculino</string>
    <string name="radio_button_female">Feminino</string>
    <string name="register_button">Registrar</string>
    <string name="hint_confirm_password">Confirmar senha</string>
    <string name="marital_status_text">Estado civil:</string>
    <string name="sex">Sexo:</string>
    <string name="hint_crm">CRM</string>
    <string name="sus_number">Número do SUS</string>
    <string name="create_password">Crie sua senha</string>
    <string-array name="marital_status">
        <item>Solteiro(a)</item>
        <item>Casado(a)</item>
        <item>Divorciado(a)</item>
        <item>Viúvo(a)</item>
        <item>Separado(a)</item>
    </string-array>
    <string-array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="specialty">
        <item>ACUPUNTURA</item>
        <item>ALERGIA E IMUNOLOGIA</item>
        <item>ANESTESIOLOGIA</item>
        <item>ANGIOLOGIA</item>
        <item>CANCEROLOGIA/CANCEROLOGIA CLÍNICA</item>
        <item>CANCEROLOGIA/CANCEROLOGIA CIRÚRGICA</item>
        <item>CANCEROLOGIA/CANCEROLOGIA PEDIÁTRICA</item>
        <item>CARDIOLOGIA</item>
        <item>CIRURGIA CARDIOVASCULAR</item>
        <item>CIRURGIA DE CABEÇA E PESCOÇO</item>
        <item>CIRURGIA DO APARELHO DIGESTIVO</item>
        <item>CIRURGIA GERAL</item>
        <item>CIRURGIA PEDIÁTRICA</item>
        <item>CIRURGIA PLÁSTICA</item>
        <item>CIRURGIA TORÁCICA</item>
        <item>CIRURGIA VASCULAR</item>
        <item>CLÍNICA MÉDICA</item>
        <item>COLOPROCTOLOGIA</item>
        <item>ENDOCRINOLOGIA</item>
        <item>ENDOSCOPIA</item>
        <item>GASTROENTEROLOGIA</item>
        <item>GENÉTICA MÉDICA</item>
        <item>GERIATRIA</item>
        <item>GINECOLOGIA</item>
        <item>HEMATOLOGIA E HEMOTERAPIA</item>
        <item>INFECTOLOGIA</item>
        <item>MASTOLOGIA</item>
        <item>MEDICINA DE FAMÍLIA E COMUNIDADE</item>
        <item>MEDICINA DO TRABALHO</item>
        <item>MEDICINA DO TRÁFEGO</item>
        <item>MEDICINA ESPORTIVA</item>
        <item>MEDICINA FÍSICA E REABILITAÇÃO</item>
        <item>MEDICINA INTENSIVA</item>
        <item>MEDICINA LEGAL</item>
        <item>MEDICINA NUCLEAR</item>
        <item>MEDICINA PREVENTIVA E SOCIAL</item>
        <item>NEFROLOGIA</item>
        <item>NEUROCIRURGIA</item>
        <item>NEUROLOGIA</item>
        <item>NUTROLOGIA</item>
        <item>OFTALMOLOGIA</item>
        <item>ORTOPEDIA e TRAUMATOLOGIA</item>
        <item>OTORRINOLARINGOLOGIA</item>
        <item>PATOLOGIA</item>
        <item>PATOLOGIA CLÍNICA/MEDICINA LABORATORIAL</item>
        <item>PEDIATRIA</item>
        <item>PSIQUIATRIA</item>
        <item>RADIOLOGIA E DIAGNÓSTICO POR IMAGEM</item>
        <item>DIAGNÓSTICO POR IMAGEM: ATUAÇÃO EXCLUSIVA ULTRA-SONOGRAFIA GERAL</item>
        <item>DIAGNÓSTICO POR IMAGEM: ATUAÇÃO EXCLUSIVA RADIOLOGIA INTERVENCIONISTA E ANGIORRADIOLOGIA</item>
        <item>RADIOTERAPIA</item>
        <item>REUMATOLOGIA</item>
        <item>UROLOGIA</item>
    </string-array>
    <string-array name="admin_via">
        <item>Via oral</item>
        <item>Via sublingual</item>
        <item>Via retal</item>
        <item>Via parenteral</item>
        <item>Via intradérmica</item>
        <item>Via subcutânea</item>
        <item>Via intramuscular</item>
        <item>Via endovenosa</item>
        <item>Via respiratória</item>
        <item>Via ocular</item>
        <item>Via nasal</item>
        <item>Via auricular</item>
    </string-array>
    <string name="title_activity_patient_home_drawer">PatientHomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_home_botton">PatientHomeBottonActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="specialty">Especialidade</string>
    <string name="title_activity_doctor_home_bottom">DoctorHomeBottomActivity</string>
    <string name="patient">Paciente</string>
    <string name="doctor">Médico</string>
    <string name="appointment_text">Selecione a especialidade:</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="doctorNameID">Nome do Médico</string>
    <string name="make_appointment">Marcar Consulta</string>
    <string name="reference_medicine">Referência</string>
    <string name="ative_principle">Princípio Ativo</string>
    <string name="interchangable">Intercambiável</string>
    <string name="concentration">Concentração</string>
    <string name="pharmaceutic_form">Forma Farmacêutica</string>
    <string name="add">Adicionar</string>
    <string name="search">Procurar</string>
    <string name="cpf">CPF</string>
    <string name="title_activity_doctor_home">DoctorHome</string>
    <string name="medicine">Medicamento</string>
    <string name="admin_via">Via de Administração</string>
    <string name="duration">Duração</string>
    <string name="frequence">Frequência</string>
    <string name="each">A cada</string>
    <string name="hours">horas</string>
    <string name="duration_days">Duração em dias</string>
    <string name="title_activity_prescription">PrescriptionActivity</string>
    <string name="finish_prescription">Finalizar</string>
    <string name="no_due_date">Sem data de término</string>
    <string name="until_date">Até a data</string>
    <string name="until">Até</string>
    <string name="days_qty">Por X dias</string>
    <string name="days">dias</string>
    <string name="obs">Observações</string>
    <string name="full_name">Nome Completo</string>
    <string name="during">Durante</string>
    <string name="hour_s">hora(s)</string>
    <string name="message">Mensagens</string>
    <string name="symptoms">Até o desaparecimento dos sintomas</string>
    <string name="title_activity_test_tab">TestTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="patients">Pacientes</string>
    <string name="prescriptions">Receitas</string>
    <string name="description">Descrição</string>
    <string name="my_prescr">Minhas Receitas Médicas</string>
    <string name="date_prescripted">Data de Prescrição</string>
    <string name="initial_date">Data de Início</string>
    <string name="pick_date">Escolha a data de Início</string>
    <string name="Ok">Ok</string>
    <string name="initial_time">Hora de Início</string>
    <string name="channel_name">Medicines Notification</string>
    <string name="channel_description">Time to take the pills</string>
    <string name="slash">/</string>
    <string name="medic_prescription">Receita Médica</string>
    <string name="pick_hour">Escolha a hora de início</string>
    <string name="advance">Avançar</string>
    <string name="sexo">Sexo</string>
    <string name="prescript">Prescrever</string>
    <string name="patient_prescriptions">Receitas Médicas do(a) Pacient</string>
    <string name="no_medicines">Nenhum Medicamento adicionado</string>
    <string name="medicine_time_title">Hora de tomar remédio</string>
    <string name="confirm">Confirmar</string>
    <string name="zerozero">00:00</string>
    <string name="no_medicine_prescribed">Nenhuma Receita Médica Prescrita</string>
</resources>
