<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreatePatientAccountActivity">

    <ScrollView
        android:id="@+id/scrollViewPatientRegisterID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patientTitleRegisterID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_register"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="163dp"
                tools:layout_editor_absoluteY="29dp" />

            <EditText
                android:id="@+id/patientEditTextNameID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_name"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="65dp" />

            <EditText
                android:id="@+id/patientEditTextSurnameID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_surname"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="124dp" />

            <EditText
                android:id="@+id/patientEditTextEmailRegisterID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="185dp" />

            <EditText
                android:id="@+id/patientEditTextDateOfBirthID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/hint_date_of_birth"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="231dp" />

            <EditText
                android:id="@+id/cpfEditTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cpf"
                android:inputType="number" />

            <TextView
                android:id="@+id/sexTextID"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sex" />


            <RadioGroup
                android:id="@+id/patientRadioGroupID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="336dp">

                <RadioButton
                    android:id="@+id/patientRadioButtonFemaleID"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/radio_button_female" />

                <RadioButton
                    android:id="@+id/patientRadioButtonMaleID"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/radio_button_male" />

            </RadioGroup>

            <EditText
                android:id="@+id/SUSeditTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sus_number"
                android:inputType="number" />

            <TextView
                android:id="@+id/passwordTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/create_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/patientPasswordRegisterID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/patientConfPasswordRegisterID"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registerPatientButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>