<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/doctorCardViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/doctorNameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctorNameID"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/doctorCRMID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctorNameID"
                android:text="@string/hint_crm"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/doctorAddressID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctorCRMID"
                android:text="@string/address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/doctorPhoneID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctorAddressID"
                android:text="@string/phone"
                android:textSize="16sp" />

            <Button
                android:id="@+id/makeAppoinButtonID"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="#7588f2"
                android:text="@string/make_appointment" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>