<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/loginPopuptextViewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="31dp"
                android:textSize="17sp"
                android:text="@string/login_popup_text" />

            <EditText
                android:id="@+id/emailEditTextID"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordEditTextID"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_below="@id/emailEditTextID"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="112dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButtonID"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/passwordEditTextID"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="165dp"
                android:text="@string/login_text" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>